--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.1.0",
     "dotenv": "^16.4.5",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "npm": "^10.5.2"
   }
